Fix project selector: Button-based cards, anchor projects dir to jar location, improve UI layout